--- a/Sparkle/ru.lproj/SUAutomaticUpdateAlert.xib
+++ b/Sparkle/ru.lproj/SUAutomaticUpdateAlert.xib
@@ -91,10 +91,10 @@ DQ
                             <action selector="doNotInstall:" target="-2" id="35"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="16">
-                        <rect key="frame" x="260" y="12" width="194" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
-                        <buttonCell key="cell" type="push" title="Установить при закрытии" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="42">
+                    <button verticalHuggingPriority="750" misplaced="YES" id="4XC-32-tlE">
+                        <rect key="frame" x="251" y="12" width="203" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Установить при закрытии" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="HTI-Qu-fES">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                             <string key="keyEquivalent" base64-UTF8="YES">
@@ -102,7 +102,7 @@ Gw
 </string>
                         </buttonCell>
                         <connections>
-                            <action selector="installLater:" target="-2" id="34"/>
+                            <action selector="installLater:" target="-2" id="n4u-Pg-rh0"/>
                         </connections>
                     </button>
                 </subviews>
