--- a/Sparkle/es.lproj/SUAutomaticUpdateAlert.xib
+++ b/Sparkle/es.lproj/SUAutomaticUpdateAlert.xib
@@ -55,20 +55,6 @@
                             <binding destination="-2" name="value" keyPath="descriptionText" id="14"/>
                         </connections>
                     </textField>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="15">
-                        <rect key="frame" x="408" y="12" width="194" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
-                        <buttonCell key="cell" type="push" title="Instalar y volver a arrancar" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="41">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
-                            <string key="keyEquivalent" base64-UTF8="YES">
-DQ
-</string>
-                        </buttonCell>
-                        <connections>
-                            <action selector="installNow:" target="-2" id="33"/>
-                        </connections>
-                    </button>
                     <button verticalHuggingPriority="750" id="30">
                         <rect key="frame" x="102" y="12" width="116" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -91,8 +77,22 @@ DQ
                             <binding destination="18" name="value" keyPath="values.SUAutomaticallyUpdate" id="19"/>
                         </connections>
                     </button>
+                    <button verticalHuggingPriority="750" misplaced="YES" id="pVd-4p-zog">
+                        <rect key="frame" x="407" y="12" width="201" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Instalar y volver a arrancar" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Dkv-J8-wq3">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                        </buttonCell>
+                        <connections>
+                            <action selector="installNow:" target="-2" id="tit-7L-zD1"/>
+                        </connections>
+                    </button>
                     <button verticalHuggingPriority="750" misplaced="YES" id="16">
-                        <rect key="frame" x="279" y="12" width="129" height="32"/>
+                        <rect key="frame" x="278" y="12" width="129" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                         <buttonCell key="cell" type="push" title="Instalar al salir" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="42">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
